--- a/package.json
+++ b/package.json
@@ -32,17 +32,21 @@
     "mobx": "^4.13.0",
     "mobx-react-lite": "^1.4.1",
     "mobx-state-tree": "^3.14.1",
+    "native-base": "^2.13.8",
     "ramda": "0.26.1",
     "react": "16.8.1",
     "react-native": "0.61.2",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "1.5.0",
     "react-native-keychain": "3.1.3",
     "react-native-localize": "^1.0.0",
+    "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "0.6.2",
     "react-native-safe-area-view": "1.0.0",
     "react-native-screens": "^2.0.0-alpha.6",
     "react-native-splash-screen": "3.1.1",
     "react-navigation": "4.0.10",
+    "react-navigation-drawer": "^2.4.2",
     "react-navigation-stack": "2.0.9",
     "reactotron-mst": "^3.1.1",
     "reactotron-react-native": "^4.0.0-beta.1",
