--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-view": "1.0.0",
     "react-native-screens": "^2.0.0-alpha.6",
     "react-native-splash-screen": "3.1.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "4.0.10",
     "react-navigation-drawer": "^2.4.2",
     "react-navigation-stack": "2.0.9",
